echo-server/manifests/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-server
  labels:
    app: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      terminationGracePeriodSeconds: 0
      containers:
      - name: echo-server
        imagePullPolicy: Always
        image: kaasops/echo-server:v0.0.1
        resources:
          limits:
            cpu: 100m
            memory: "100Mi"
          requests:
            cpu: 100m
            memory: "100Mi"
        args:
          - '--config=/etc/echo-server/config.yaml'
          - '--port=8080'
        volumeMounts:
        - mountPath: /etc/echo-server/config.yaml
          name: config
          subPath: config.yaml
      volumes:
      - name: config
        configMap:
          name: echo-server-config
